# qqx3d.github.io

./: .gitignore  Cargo.toml  README.md  index.html
examples/: animated_triangle.rs  triangle.rs
src/: lib.rs
src/color/: mod.rs
src/event/: mod.rs
src/event/callback/: mod.rs
src/init/: impls.rs  mod.rs
src/polygon/: bound.rs  compiled.rs  mod.rs  separate.rs
src/vec/: impls.rs  mod.rs
src/window/: builder.rs  drawable.rs  impls.rs  mod.rs  target.rs
